fix: log 메시지 전체적으로 수정